smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/enum-values/enum-with-bad-values.smithy
// smithy.example#Foo$BAR: enum members can only be assigned string values, but found: 10 | EnumShape
$version: "2.0"

namespace smithy.example

enum Foo {
    BAR = 10
}
